--- a/UI/CustomerSupport/src/app/components/login/login.component.html
+++ b/UI/CustomerSupport/src/app/components/login/login.component.html
@@ -7,26 +7,28 @@
                         <h3 class="pt-3 font-weight-bold">Login</h3>
                     </div>
                     <div class="panel-body p-3">
-                        <form>
+                        <form [formGroup]="loginForm">
                             <div class="form-group pt-3">
-                                <div class="input-field">
+                                <div class="input-field" [class.error]="loginForm.controls['username'].dirty && loginForm.hasError('required','username')">
                                     <span class="fa fa-user p-2"></span>
-                                    <input type="text" placeholder="Username">
+                                    <input type="text" placeholder="Username" formControlName="username" >
                                 </div>
                             </div>
-
+                            <small class="text-danger" *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required','username')">*Username is required</small>
+                            
                             <div class="form-group pt-3">
-                                <div class="input-field">
+                                <div class="input-field" [class.error]="loginForm.controls['password'].dirty && loginForm.hasError('required','password')">
                                     <span class="fa fa-lock p-2"></span>
-                                    <input [type]="type" placeholder="Password">
+                                    <input [type]="type" placeholder="Password" formControlName="password" >
                                     <span (click)="hideOrShowPassword()" class="fa fa-eye-slash" style="margin-left: auto;" ></span>
                                 </div>
                             </div>
-
+                            <small class="text-danger" *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required', 'password')">*Password is required</small>
+                           
                             <div class="form-inline fr mt-4">
                                 <a id="forgot" class="font-weight-bold">Forgot Password ?</a>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block mt-4 w-100">Login</button>
+                            <button (click)="onSubmit()" type="submit" class="btn btn-primary btn-block mt-4 w-100">Login</button>
                             <div class="text-center pt-4 text-muted">Don't have an account? <a routerLink="/signup">Sign Up</a></div>
                         </form>
                     </div>
