--- a/UI/CustomerSupport/src/app/components/chat-room/chat-room.component.css
+++ b/UI/CustomerSupport/src/app/components/chat-room/chat-room.component.css
@@ -1,7 +1,7 @@
 .container{
     margin: auto;
      background-color: white;
-     background-image: linear-gradient(180deg, #4d8cc7 254, #2d809c 100%);
+     background-image: cadetblue;
  }
  
  .chat_header{
