--- a/UI/CustomerSupport/src/app/components/login/login.component.css
+++ b/UI/CustomerSupport/src/app/components/login/login.component.css
@@ -1,6 +1,6 @@
 .outer{
     height: 100vh;
-    background: linear-gradient(to top, #c9c9ff 50%, #6e6ef6 90%) no-repeat;
+    background: linear-gradient(to top, #cdcdd0 50%, rgb(107, 189, 236) 90%) no-repeat;
 }
 
 .panel-heading{
