--- a/UI/CustomerSupport/src/app/components/login/login.component.css
+++ b/UI/CustomerSupport/src/app/components/login/login.component.css
@@ -73,3 +73,35 @@ input[type='password']{
     align-items: center;
     padding-right: 10px; /* Dodajte željeni razmak između ikone oka i input polja */
   }
+
+.combo{
+
+    border-radius: 5px;
+    margin-left: 15px;
+    margin-top: 15px;
+    padding: 5px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    border: 1px solid #ddd;
+    color: #4343ff;
+   padding-left: 5px;
+   width: 170px ;
+   justify-content: center;
+}
+
+.select{
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    border: 1px solid #ddd;
+    color: #4343ff;
+    margin-top: 0px;
+    width: 170px;
+    border: none;
+    outline: none;
+    justify-content: center;
+
+}
